Tests: add supervisorctl update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ test:sc_mysql:mysql-5.6:ubuntu-14.04:
   - ./test/install.sh
   - mv ./test/hiera/module-mysql56.yaml  ./test/hiera/module.yaml
   - puppet apply -v test/site.pp
+  - supervisorctl update
+  - puppet apply -v test/site.pp
   - inspec exec test/inspec/sc_mysql.rb
 
 test:sc_mysql:mysql-5.7:ubuntu-14.04:
