--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
-image: scalecommerce/base:0.6
+image: scalecommerce/xenial:1.19
 
-test:sc_mysql:mysql-5.6:ubuntu-14.04:
+test:sc_mysql:mysql-5.6:ubuntu-16.04:
   script:
   - ./test/install.sh
   - mv ./test/hiera/module-mysql56.yaml  ./test/hiera/module.yaml
@@ -9,7 +9,7 @@ test:sc_mysql:mysql-5.6:ubuntu-14.04:
   - puppet apply -v test/site.pp
   - inspec exec test/inspec/sc_mysql.rb
 
-test:sc_mysql:mysql-5.7:ubuntu-14.04:
+test:sc_mysql:mysql-5.7:ubuntu-16.04:
   script:
   - ./test/install.sh
   - mv ./test/hiera/module-mysql57.yaml  ./test/hiera/module.yaml
