--- a/test/hiera.yaml
+++ b/test/hiera.yaml
@@ -1,8 +1,13 @@
-backends:
- - yaml
-:yaml:
- :datadir: "%{settings::confdir}/hieradata"
-:hierarchy:
- - override
- - module
- - common
+---
+version: 5
+defaults:
+ datadir: /builds/sc-puppet/puppet-sc_nginx/test/hiera
+ data_hash: yaml_data
+
+hierarchy:
+ - name: Override Data
+   path: override.yaml
+ - name: Modul Data
+   path: module.yaml
+ - name: Common Data
+   path: common.yaml
