--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,26 +5,33 @@ stages:
   - Puppet 5
   - Puppet 6
 
+before_script:
+  - apt-get update >/dev/null
+
 16.04:sc_mysql:mysql-5.6:puppet5:
+  stage: Puppet 5
+  image: $SCIMAGE
+  variables:
+    MYSQL_VERSION: 'mysql56'
+  script:
+    - ./test/install-puppet5.sh
+    - ./test/install.sh
+    - export PATH=/opt/puppetlabs/bin:$PATH
+    - cp ./test/yaml/module-$MYSQL_VERSION.yaml  ./test/hieradata/module.yaml
+    - puppet apply -v test/site.pp
+    - supervisorctl update
+    - puppet apply -v test/site.pp
+    - inspec exec test/inspec/sc_mysql.rb
+
+
+16.04:sc_mysql:mysql-5.7:puppet5:
   stage: Puppet 5
   image: $SCIMAGE
   script:
     - ./test/install-puppet5.sh
     - ./test/install.sh
     - export PATH=/opt/puppetlabs/bin:$PATH
-    - mv ./test/hiera/module-mysql56.yaml  ./test/hiera/module.yaml
-    - puppet apply -v test/site.pp
-    - supervisorctl update
-    - puppet apply -v test/site.pp
-    - inspec exec test/inspec/sc_mysql.rb
-
-16.04:sc_mysql:mysql-5.7:puppet5:
-  stage: Puppet 5
-  script:
-    - ./test/install-puppet5.sh
-    - ./test/install.sh
-    - export PATH=/opt/puppetlabs/bin:$PATH
-    - mv ./test/hiera/module-mysql57.yaml  ./test/hiera/module.yaml
+    - cp ./test/yaml/module-mysql57.yaml  ./test/hieradata/module.yaml
     - puppet apply -v test/site.pp
     - inspec exec test/inspec/sc_mysql.rb
 
