fix the mysql57 part

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,16 +22,20 @@ before_script:
     - supervisorctl update
     - puppet apply -v test/site.pp
     - inspec exec test/inspec/sc_mysql.rb
+    - rm ./test/hieradata/module.yaml
 
 
 16.04:sc_mysql:mysql-5.7:puppet5:
   stage: Puppet 5
   image: $SCIMAGE
+  variables:
+    MYSQL_VERSION: 'mysql57'
   script:
     - ./test/install-puppet5.sh
     - ./test/install.sh
     - export PATH=/opt/puppetlabs/bin:$PATH
-    - cp ./test/yaml/module-mysql57.yaml  ./test/hieradata/module.yaml
+    - cp ./test/yaml/module-$MYSQL_VERSION.yaml  ./test/hieradata/module.yaml
     - puppet apply -v test/site.pp
     - inspec exec test/inspec/sc_mysql.rb
+    - rm ./test/hieradata/module.yaml
 
