--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ before_script:
     - ./test/install-$PUPPET_VERSION.sh
     - ./test/install.sh
     - export PATH=/opt/puppetlabs/bin:$PATH
-    - cp ./test/yaml/module-$MYSQL_VERSION.yaml  ./test/hieradata/module.yaml
+    - cp ./test/yaml/module-mysql$MYSQL_VERSION.yaml  ./test/hieradata/module.yaml
+    - sed -i -r -e "s/should match \/\^.*\//should match \/\^$MYSQL_VERSION\//g" ./test/inspec/sc_mysql.rb
     - puppet apply -v test/site.pp
     - supervisorctl update
     - puppet apply -v test/site.pp
@@ -25,16 +26,15 @@ before_script:
   stage: Puppet 5
   image: $SCIMAGE
   variables:
-    MYSQL_VERSION: 'mysql56'
+    MYSQL_VERSION: '5.6'
     PUPPET_VERSION: 'puppet5'
   <<: *full_test
-
 
 16.04:sc_mysql:mysql-5.7:puppet5:
   stage: Puppet 5
   image: $SCIMAGE
   variables:
-    MYSQL_VERSION: 'mysql57'
+    MYSQL_VERSION: '5.7'
     PUPPET_VERSION: 'puppet5'
   <<: *full_test
 
@@ -42,7 +42,7 @@ before_script:
   stage: Puppet 5
   image: scalecommerce/bionic:1.0
   variables:
-    MYSQL_VERSION: 'mysql56'
+    MYSQL_VERSION: '5.6'
     PUPPET_VERSION: 'puppet5'
   <<: *full_test
 
@@ -50,7 +50,7 @@ before_script:
   stage: Puppet 5
   image: scalecommerce/bionic:1.0
   variables:
-    MYSQL_VERSION: 'mysql57'
+    MYSQL_VERSION: '5.7'
     PUPPET_VERSION: 'puppet5'
   <<: *full_test
 
@@ -58,7 +58,7 @@ before_script:
   stage: Puppet 6
   image: $SCIMAGE
   variables:
-    MYSQL_VERSION: 'mysql56'
+    MYSQL_VERSION: '5.6'
     PUPPET_VERSION: 'puppet6'
   <<: *full_test
 
@@ -66,7 +66,7 @@ before_script:
   stage: Puppet 6
   image: $SCIMAGE
   variables:
-    MYSQL_VERSION: 'mysql57'
+    MYSQL_VERSION: '5.7'
     PUPPET_VERSION: 'puppet6'
   <<: *full_test
 
@@ -74,7 +74,7 @@ before_script:
   stage: Puppet 6
   image: scalecommerce/bionic:1.0
   variables:
-    MYSQL_VERSION: 'mysql56'
+    MYSQL_VERSION: '5.6'
     PUPPET_VERSION: 'puppet6'
   <<: *full_test
 
@@ -82,7 +82,7 @@ before_script:
   stage: Puppet 6
   image: scalecommerce/bionic:1.0
   variables:
-    MYSQL_VERSION: 'mysql57'
+    MYSQL_VERSION: '5.7'
     PUPPET_VERSION: 'puppet6'
   <<: *full_test
 
