Switch tests to global puppet modules and remove some legacy function

--- a/test/hiera.yaml
+++ b/test/hiera.yaml
@@ -1,8 +1,14 @@
-backends:
-  - yaml
-:yaml:
-  :datadir: "%{settings::confdir}/hieradata"
-:hierarchy:
-  - override
-  - module
-  - common
+---
+version: 5
+
+defaults:
+  datadir: "hieradata"
+  data_hash: yaml_data
+
+hierarchy:
+  - name: overrride
+    path: override.yaml
+  - name: common
+    path: common.yaml
+  - name: module
+    path: module.yaml
