--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  SCIMAGE: scalecommerce/xenial:1.17
+  SCIMAGE: scalecommerce/xenial:1.20
 
 stages:
   - Puppet 5
@@ -16,8 +16,6 @@ before_script:
     - export PATH=/opt/puppetlabs/bin:$PATH
     - cp ./test/yaml/module-mysql$MYSQL_VERSION.yaml  ./test/hieradata/module.yaml
     - sed -i -r -e "s/should match \/\^.*\//should match \/\^$MYSQL_VERSION\//g" ./test/inspec/sc_mysql.rb
-    - puppet apply -v test/site.pp
-    - supervisorctl update
     - puppet apply -v test/site.pp
     - inspec exec test/inspec/sc_mysql.rb
     - rm ./test/hieradata/module.yaml
@@ -40,7 +38,7 @@ before_script:
 
 18.04:sc_mysql:mysql-5.6:puppet5:
   stage: Puppet 5
-  image: scalecommerce/bionic:1.0
+  image: scalecommerce/bionic:1.2
   variables:
     MYSQL_VERSION: '5.6'
     PUPPET_VERSION: 'puppet5'
@@ -48,7 +46,7 @@ before_script:
 
 18.04:sc_mysql:mysql-5.7:puppet5:
   stage: Puppet 5
-  image: scalecommerce/bionic:1.0
+  image: scalecommerce/bionic:1.2
   variables:
     MYSQL_VERSION: '5.7'
     PUPPET_VERSION: 'puppet5'
@@ -72,7 +70,7 @@ before_script:
 
 18.04:sc_mysql:mysql-5.6:puppet6:
   stage: Puppet 6
-  image: scalecommerce/bionic:1.0
+  image: scalecommerce/bionic:1.2
   variables:
     MYSQL_VERSION: '5.6'
     PUPPET_VERSION: 'puppet6'
@@ -80,7 +78,7 @@ before_script:
 
 18.04:sc_mysql:mysql-5.7:puppet6:
   stage: Puppet 6
-  image: scalecommerce/bionic:1.0
+  image: scalecommerce/bionic:1.2
   variables:
     MYSQL_VERSION: '5.7'
     PUPPET_VERSION: 'puppet6'
@@ -88,7 +86,7 @@ before_script:
 
 
 
-#push2github:
-#  stage: push2github
-#  script:
-#    - git push --quiet --mirror https://$GITHUB_TOKEN@github.com/ScaleCommerce/puppet-sc_mysql.git
+push2github:
+  stage: push2github
+  script:
+    - git push --quiet --mirror https://$GITHUB_TOKEN@github.com/ScaleCommerce/puppet-sc_mysql.git
